Remove empty lines and fixed typo

--- a/extension/misc/options.html
+++ b/extension/misc/options.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This shoud be an advance settings page!!!</h1>
+    <h1>This should be an advance settings page!!!</h1>
 </body>
 </html>
