Add base functionality to extension

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="popup.css">
     <script type="module" src="popup.js"></script>
     <title>Popup</title>
 </head>
 <body>
-    <button id="sendToBackground">Send to Background</button>
-    <button id="sendToContent">Send to Content</button>
+    <button id="start-script">Start</button>
+    <button id="stop-script">Stop</button>
 </body>
 </html>
