Update look for extension

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="popup.css">
     <script type="module" src="popup.js"></script>
-    <title>Popup</title>
+    <title>Amazon Scraper</title>
 </head>
+
 <body>
-    <button id="start-script">Start</button>
-    <button id="stop-script">Stop</button>
+    <div>
+        <h1><img src="assets/amazon.svg" alt="amazonScraper"> Amazon Scraper</h1>
+        <h3>Dropshipping Software System</h3>
+        <h5>Our project is part of the SoftUni initiative, providing students with an opportunity to work on a
+            project that closely resembles real-world applications.</h5>
+        <ul>
+            <li>Lead by: <a href="https://github.com/DeyanDanailov" target="_blank">Deyan Danailov</a></li>
+            <li>Developed by: <a href="https://github.com/TodorYadkov" target="_blank">Todor Yadkov</a>, <a
+                    href="https://github.com/RosenDobrev10" target="_blank">Rosen Dobrev</a> and <a
+                    href="https://github.com/maximkraychev" target="_blank">Maxim Kraychev</a></li>
+        </ul>
+        <button id="btn">Start</button>
+    </div>
 </body>
+
 </html>
