--- a/extension/popup.html
+++ b/extension/popup.html
@@ -13,16 +13,42 @@
 <body>
     <div>
         <h1><img src="assets/amazon.svg" alt="amazonScraper"> Amazon Scraper</h1>
-        <h3>Dropshipping Software System</h3>
-        <h5>Our project is part of the SoftUni initiative, providing students with an opportunity to work on a
-            project that closely resembles real-world applications.</h5>
-        <ul>
-            <li>Lead by: <a href="https://github.com/DeyanDanailov" target="_blank">Deyan Danailov</a></li>
-            <li>Developed by: <a href="https://github.com/TodorYadkov" target="_blank">Todor Yadkov</a>, <a
-                    href="https://github.com/RosenDobrev10" target="_blank">Rosen Dobrev</a> and <a
-                    href="https://github.com/maximkraychev" target="_blank">Maxim Kraychev</a></li>
-        </ul>
-        <button id="btn">Start</button>
+
+        <div class="home">
+            <h3>Dropshipping Software System</h3>
+            <h5>Our project is part of the SoftUni initiative, providing students with an opportunity to work on a
+                project that closely resembles real-world applications.</h5>
+            <ul>
+                <li>Lead by: <a href="https://github.com/DeyanDanailov" target="_blank">Deyan Danailov</a></li>
+                <li>Developed by: <a href="https://github.com/TodorYadkov" target="_blank">Todor Yadkov</a>, <a
+                        href="https://github.com/RosenDobrev10" target="_blank">Rosen Dobrev</a> and <a
+                        href="https://github.com/maximkraychev" target="_blank">Maxim Kraychev</a></li>
+            </ul>
+            <button class="btn action">Start</button>
+        </div>
+
+        <div class="login-form">
+            <form class="form" method="post">
+                
+                <div>
+                    <label for="email">Email</label>
+                    <input id="email" type="email" name="email" required>
+                </div>
+
+                <div>
+                    <label for="extension-name">Extension Name</label>
+                    <input id="extension-name" type="text" name="extensionName" required minlength="5" maxlength="100">
+                </div>
+
+                <div>
+                    <label for="password">Password</label>
+                    <input id="password" type="password" name="password" required>
+                </div>
+
+                <input class="btn submit" type="submit" value="Login">
+
+            </form>
+        </div>
     </div>
 </body>
 
