Remove unnecessary div

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -32,8 +32,8 @@
 
         <div class="user-info">
             <div class="info-container">
-                <p class="email">Email: <span>test@example.com</span></p>
-                <p class="extension-name">Extension Name: <span>Extension 1</span></p>
+                <p class="email">Email: <span></span></p>
+                <p class="extension-name">Extension Name: <span></span></p>
             </div>
             <div class="buttons-container">
                 <button class="btn action">Start</button>
@@ -43,31 +43,29 @@
             </div>
         </div>
 
-        <div class="login-form">
-            <form class="form" method="post">
+        <form class="form" method="post">
 
-                <h2>Login</h2>
+            <h2>Login</h2>
 
-                <div>
-                    <label for="email">Email</label>
-                    <input id="email" class="email" type="email" name="email" required placeholder="Email">
-                </div>
+            <div>
+                <label for="email">Email</label>
+                <input id="email" class="email" type="email" name="email" required placeholder="Email">
+            </div>
 
-                <div>
-                    <label for="extension-name">Extension Name</label>
-                    <input id="extension-name" class="extension-name" type="text" name="extensionName" required
-                        minlength="5" maxlength="100" placeholder="Extension Name">
-                </div>
+            <div>
+                <label for="extension-name">Extension Name</label>
+                <input id="extension-name" class="extension-name" type="text" name="extensionName" required
+                    minlength="5" maxlength="100" placeholder="Extension Name">
+            </div>
 
-                <div>
-                    <label for="password">Password</label>
-                    <input id="password" class="password" type="password" name="password" required placeholder="Password">
-                </div>
+            <div>
+                <label for="password">Password</label>
+                <input id="password" class="password" type="password" name="password" required placeholder="Password">
+            </div>
 
-                <input class="btn submit" type="submit" value="Sign in">
+            <input class="btn submit" type="submit" value="Sign in">
 
-            </form>
-        </div>
+        </form>
     </div>
 </body>
 
