Display server message on popup

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -31,6 +31,7 @@
         </div>
 
         <div class="user-info">
+            <p class="server-error-product"></p>
             <div class="info-container">
                 <p class="email">Email: <span></span></p>
                 <p class="extension-name">Extension Name: <span></span></p>
@@ -47,7 +48,7 @@
 
             <h2>Login</h2>
             <p class="server-error"></p>
-            
+
             <div>
                 <label for="email">Email</label>
                 <input id="email" class="email" type="email" name="email" placeholder="Email">
@@ -56,7 +57,8 @@
 
             <div>
                 <label for="extension-name">Extension Name</label>
-                <input id="extension-name" class="extension-name" type="text" name="extensionName" placeholder="Extension Name">
+                <input id="extension-name" class="extension-name" type="text" name="extensionName"
+                    placeholder="Extension Name">
                 <p class="error">Extension Name is required</p>
             </div>
 
