--- a/extension/popup.html
+++ b/extension/popup.html
@@ -22,10 +22,10 @@
             <p>Our project is part of the SoftUni initiative, providing students with an opportunity to work on a
                 project that closely resembles real-world applications.</p>
             <ul>
-                <li>Lead by: <a href="https://github.com/DeyanDanailov" target="_blank">Deyan Danailov</a></li>
-                <li>Developed by: <a href="https://github.com/TodorYadkov" target="_blank">Todor Yadkov</a>, <a
-                        href="https://github.com/RosenDobrev10" target="_blank">Rosen Dobrev</a> and <a
-                        href="https://github.com/maximkraychev" target="_blank">Maxim Kraychev</a></li>
+                <li>Lead by: <a href="https://github.com/DeyanDanailov" target="blank">Deyan Danailov</a></li>
+                <li>Developed by: <a href="https://github.com/TodorYadkov" target="blank">Todor Yadkov</a>, <a
+                        href="https://github.com/RosenDobrev10" target="blank">Rosen Dobrev</a> and <a
+                        href="https://github.com/maximkraychev" target="blank">Maxim Kraychev</a></li>
             </ul>
 
         </div>
