remove _ from target

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -39,7 +39,7 @@
             <div class="buttons-container">
                 <button class="btn action">Start</button>
                 <button class="btn logout">Logout</button>
-                <a href="https://github.com/TodorYadkov/dropshipping-scraper" target="_blank"
+                <a href="https://github.com/TodorYadkov/dropshipping-scraper" target="blank"
                     class="btn documentation">Documentation</a>
             </div>
         </div>
