Change time to expire token

--- a/server/html_templates/passwordResetTemplate.html
+++ b/server/html_templates/passwordResetTemplate.html
@@ -282,8 +282,7 @@
                                                                     <div
                                                                         style="color:#3f4d75;font-family:Roboto Slab,Arial,Helvetica Neue,Helvetica,sans-serif;font-size:12px;line-height:120%;text-align:center;mso-line-height-alt:14.399999999999999px">
                                                                         <p style="margin:0;word-break:break-word">
-                                                                            <span>This link will&nbsp;expire in 1
-                                                                                hour.&nbsp;If you continue to have
+                                                                            <span>This link will&nbsp;expire in 10 minutes.&nbsp;If you continue to have
                                                                                 problems</span><br>
                                                                             <span>please feel free to &nbsp;<a
                                                                                     href="mailto:dropshipping.scraper.service@gmail.com"
