--- a/extension/popup.html
+++ b/extension/popup.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="image-wrapper">
-            <img src="assets/amazon.svg" alt="amazonScraper">
+            <img src="assets/logo.svg" alt="amazonScraper">
         </div>
         <h1 class="heading">Amazon Scraper</h1>
 
